tests/build/cases/widget_new/missing_field_all_multi.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> cases/widget_new/missing_field_all_multi.rs:9:31
    |
9   |         background_gradient = { }
    |                               ^--
    |                               |
    |                               supplied 1 argument
    |                               expected 2 arguments
    |
note: associated function defined here
   --> $WORKSPACE/zero-ui/src/properties/visual.rs
    |
    | / #[property(fill, default(0.deg(), {
    | |     let c = colors::BLACK.transparent();
    | |     crate::core::gradient::stops![c, c]
    | | }))]
    | |____^
    = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
